--- a/app/frontend/assets/styles/components/_incident-details-blocks.scss
+++ b/app/frontend/assets/styles/components/_incident-details-blocks.scss
@@ -111,40 +111,6 @@
             }
         }
 
-        .container__uitklapper {
-            z-index: 10;
-            > span {
-                display: inline-block;
-                padding: 0.25rem 2em 0.25rem 0.25rem;
-            }
-
-            .legenda {
-                left: -15px;
-                padding: 4px;
-                button {
-                    font-weight: 400;
-                    background-color: transparent;
-                    text-align: left;
-                    padding: 6px 8px;
-                    min-height: 0;
-                    margin-bottom: 0;
-                    svg {
-                        vertical-align: sub;
-                        margin-right: 5px;
-                    }
-
-                    &:hover,
-                    &:focus {
-                        background-color: $gray-100;
-                    }
-                }
-            }
-
-            &:hover {
-                z-index: 20;
-            }
-        }
-
         .description {
             font-weight: 700;
 
@@ -464,6 +430,114 @@
 
         &:last-child {
             padding-right: 30px;
+        }
+    }
+}
+
+.container__taak,
+.taak {
+    .container__uitklapper {
+        z-index: 10;
+        > span {
+            display: inline-block;
+            padding: 0.25rem 2em 0.25rem 0.25rem;
+        }
+
+        .legenda {
+            left: -15px;
+            padding: 4px;
+            button,
+            label {
+                font-weight: 400;
+                background-color: transparent;
+                text-align: left;
+                padding: 6px 8px;
+                min-height: 0;
+                margin-bottom: 0;
+                svg {
+                    vertical-align: sub;
+                    margin-right: 5px;
+                }
+
+                &:hover,
+                &:focus {
+                    background-color: $gray-100;
+                }
+            }
+
+            .arrow--right {
+                margin: 0;
+                padding: 0;
+                position: absolute;
+                right: 8px;
+                top: 4px;
+                transform: rotate(-90deg);
+            }
+
+            .list__wrapper {
+                position: relative;
+
+                .list__nested {
+                    @include list-clean();
+                    background: white;
+                    position: absolute;
+                    right: calc(100% + 8px);
+                    top: 0px;
+                    z-index: 100;
+                    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
+
+                    li {
+                        span {
+                            max-width: 200px;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            font-weight: 400;
+                        }
+
+                        input[type="checkbox"] {
+                            @extend .visually-hidden;
+                        }
+
+                        label {
+                            padding-left: 30px;
+                            line-height: 24px;
+                            font-size: 1rem;
+                            position: relative;
+                            &:has(input:checked) {
+                                &::before {
+                                    position: absolute;
+                                    display: block;
+                                    left: 10px;
+                                    top: 13px;
+                                    width: 12px;
+                                    height: 9px;
+                                    background-image: url("../icons/checkmark-v2.svg");
+                                    filter: invert(100%);
+                                    background-size: 12px 9px;
+                                    display: inline-block;
+                                    content: "";
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        &:hover {
+            z-index: 20;
+        }
+    }
+}
+
+.taak {
+    .container__uitklapper {
+        width: 30px;
+
+        .legenda {
+            left: auto;
+            right: -90px;
+            top: 30px;
         }
     }
 }
