Afhandeltekst toegevoegd aan logboek

--- a/app/apps/main/templates/logboek/basis.html
+++ b/app/apps/main/templates/logboek/basis.html
@@ -25,7 +25,7 @@
                                 {{logboek_item.render_icon}}
                                 <div class="message">
                                     <h4>{{logboek_item.titel}}</h4>
-                                    <div class="container__overflow" data-controller="overflow" tabindex="0">
+                                    <div>
                                         {{logboek_item.render_content}}
                                     </div>
                                 </div>
