--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -52,6 +52,7 @@
                     -webkit-line-clamp: 4;
                     max-height: 6em;
                     -webkit-box-orient: vertical;
+                    font-size: 0.875em;
                 }
 
                 &.has-overflow {
