--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -16,7 +16,7 @@
             font-size: $fz-14;
             font-weight: 400;
             padding: 0;
-            margin: 0;
+            margin: 0 0 0.25em;
         }
 
         ul {
@@ -52,7 +52,10 @@
                     -webkit-line-clamp: 4;
                     max-height: 6em;
                     -webkit-box-orient: vertical;
-                    font-size: 0.875em;
+
+                    p {
+                        margin-bottom: 0.25em;
+                    }
                 }
 
                 &.has-overflow {
