--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -202,4 +202,8 @@
     left: anchor(center);
     transform: translate(-50%, 110%);
     max-width: 300px;
+    border: 1px solid $gray-200;
+    box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.07);
+    border-radius: 4px;
+    padding: 0.75em;
 }
